--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,8 @@
     "handlebars": "^4.7.7",
     "passport": "^0.4.1",
     "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
+    "prettier": "2.3.2"
   }
 }
